--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"license": "MIT",
 	"type": "module",
+	"main": "./dist/index.js",
 	"exports": {
 		".": "./dist/index.js"
 	},
