--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"node": ">=18",
 		"pnpm": ">=8"
 	},
-	"packageManager": "pnpm@8.6.0",
+	"packageManager": "pnpm@8.6.1",
 	"scripts": {
 		"build": "tsup ./src/index.ts",
 		"ci:release": "changeset publish",
@@ -31,18 +31,19 @@
 		"validate": "run-p format:check lint:check types:check test"
 	},
 	"devDependencies": {
-		"@changesets/changelog-github": "^0.4.8",
-		"@changesets/cli": "^2.26.1",
-		"@commitlint/cli": "^17.6.3",
-		"@sinonjs/fake-timers": "^10.2.0",
 		"@acdh-oeaw/commitlint-config": "^1.0.0",
 		"@acdh-oeaw/eslint-config": "^1.0.0",
 		"@acdh-oeaw/prettier-config": "^1.0.0",
 		"@acdh-oeaw/tsconfig-lib": "^1.0.0",
+		"@changesets/changelog-github": "^0.4.8",
+		"@changesets/cli": "^2.26.1",
+		"@commitlint/cli": "^17.6.3",
+		"@sinonjs/fake-timers": "^10.2.0",
 		"@types/node": "^18.16.16",
 		"@types/sinonjs__fake-timers": "^8.1.2",
 		"eslint": "^8.41.0",
 		"lint-staged": "^13.2.2",
+		"listhen": "^1.0.4",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.8",
 		"simple-git-hooks": "^2.8.1",
