chore: clean up scripts

--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
 	"packageManager": "pnpm@8.6.9",
 	"scripts": {
 		"build": "tsup ./src/index.ts",
+		"changeset:add": "changeset add",
+		"changeset:status": "changeset status --verbose",
 		"ci:release": "changeset publish",
 		"format:check": "prettier . --cache --check --ignore-path ./.gitignore",
 		"format:fix": "pnpm run format:check --write",
-		"lint:check": "eslint . --cache --ignore-path .gitignore",
+		"lint:check": "eslint . --cache --ignore-path ./.gitignore",
 		"lint:fix": "pnpm run lint:check --fix",
 		"prepare": "run-s setup",
 		"prepublishOnly": "run-s validate build",
-		"setup": "simple-git-hooks || exit 0",
+		"setup": "is-ci || simple-git-hooks",
 		"test": "uvu -r tsm",
 		"types:check": "tsc --noEmit",
 		"validate": "run-p format:check lint:check types:check test"
@@ -42,6 +44,7 @@
 		"@types/node": "^18.16.19",
 		"@types/sinonjs__fake-timers": "^8.1.2",
 		"eslint": "^8.45.0",
+		"is-ci": "^3.0.1",
 		"lint-staged": "^13.2.3",
 		"listhen": "^1.1.2",
 		"npm-run-all": "^4.1.5",
