--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"node": ">=18",
 		"pnpm": ">=8"
 	},
-	"packageManager": "pnpm@8.6.9",
+	"packageManager": "pnpm@8.8.0",
 	"scripts": {
 		"build": "tsup ./src/index.ts",
 		"changeset:add": "changeset add",
@@ -34,25 +34,25 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^1.0.0",
-		"@acdh-oeaw/eslint-config": "^1.0.0",
+		"@acdh-oeaw/eslint-config": "^1.0.4",
 		"@acdh-oeaw/prettier-config": "^1.0.1",
 		"@acdh-oeaw/tsconfig-lib": "^1.0.0",
 		"@changesets/changelog-github": "^0.4.8",
 		"@changesets/cli": "^2.26.2",
-		"@commitlint/cli": "^17.6.7",
+		"@commitlint/cli": "^17.7.2",
 		"@sinonjs/fake-timers": "^10.3.0",
-		"@types/node": "^18.16.19",
-		"@types/sinonjs__fake-timers": "^8.1.2",
-		"eslint": "^8.45.0",
+		"@types/node": "^18.18.1",
+		"@types/sinonjs__fake-timers": "^8.1.3",
+		"eslint": "^8.50.0",
 		"is-ci": "^3.0.1",
-		"lint-staged": "^13.2.3",
-		"listhen": "^1.1.2",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^3.0.0",
-		"simple-git-hooks": "^2.8.1",
+		"lint-staged": "^14.0.1",
+		"listhen": "^1.5.5",
+		"npm-run-all2": "^6.0.6",
+		"prettier": "^3.0.3",
+		"simple-git-hooks": "^2.9.0",
 		"tsm": "^2.3.0",
-		"tsup": "^7.1.0",
-		"typescript": "^5.1.6",
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2",
 		"uvu": "^0.5.6"
 	},
 	"commitlint": {
