--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Enable corepack
-        run: corepack enable
+      # Necessary because `actions/setup-node` does not yet support `corepack`.
+      # @see https://github.com/actions/setup-node/issues/531
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: pnpm
