--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"node": ">=20",
 		"pnpm": ">=8"
 	},
-	"packageManager": "pnpm@8.15.6",
+	"packageManager": "pnpm@8.15.7",
 	"scripts": {
-		"build": "tsup ./src/index.ts",
+		"build": "tsup",
 		"changeset:add": "changeset add",
 		"changeset:status": "changeset status --verbose",
 		"ci:release": "changeset publish",
@@ -42,7 +42,7 @@
 		"@changesets/cli": "^2.27.1",
 		"@commitlint/cli": "^18.6.1",
 		"@sinonjs/fake-timers": "^11.2.2",
-		"@types/node": "^20.11.30",
+		"@types/node": "^20.12.7",
 		"@types/sinonjs__fake-timers": "^8.1.5",
 		"eslint": "^8.57.0",
 		"is-ci": "^3.0.1",
@@ -53,7 +53,7 @@
 		"simple-git-hooks": "^2.11.1",
 		"tsm": "^2.3.0",
 		"tsup": "^8.0.2",
-		"typescript": "^5.4.3",
+		"typescript": "^5.4.5",
 		"uvu": "^0.5.6"
 	},
 	"commitlint": {
