--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"prepare": "run-s setup",
 		"prepublishOnly": "run-s validate build",
 		"setup": "is-ci || simple-git-hooks",
-		"test": "uvu -r tsm",
+		"test": "NODE_OPTIONS=\"--import tsx\" uvu",
 		"types:check": "tsc --noEmit",
 		"validate": "run-p format:check lint:check types:check test"
 	},
@@ -51,8 +51,8 @@
 		"npm-run-all2": "^6.2.0",
 		"prettier": "^3.3.1",
 		"simple-git-hooks": "^2.11.1",
-		"tsm": "^2.3.0",
 		"tsup": "^8.1.0",
+		"tsx": "^4.16.0",
 		"typescript": "^5.4.5",
 		"uvu": "^0.5.6"
 	},
@@ -67,7 +67,7 @@
 			"eslint --cache --fix",
 			"prettier --cache --write"
 		],
-		"*": "prettier --cache --ignore-unknown --write"
+		"*.!(ts)": "prettier --cache --ignore-unknown --write"
 	},
 	"prettier": "@acdh-oeaw/prettier-config",
 	"simple-git-hooks": {
