--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 	"sideEffects": false,
 	"engines": {
 		"node": ">=20",
-		"pnpm": ">=9"
+		"pnpm": "9.x"
 	},
-	"packageManager": "pnpm@9.2.0",
+	"packageManager": "pnpm@9.9.0",
 	"scripts": {
 		"build": "tsup",
 		"changeset:add": "changeset add",
@@ -24,7 +24,7 @@
 		"ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
 		"format:check": "prettier . --cache --check --ignore-path ./.gitignore",
 		"format:fix": "pnpm run format:check --write",
-		"lint:check": "eslint . --cache --ignore-path ./.gitignore",
+		"lint:check": "eslint . --cache",
 		"lint:fix": "pnpm run lint:check --fix",
 		"prepare": "run-s setup",
 		"prepublishOnly": "run-s validate build",
@@ -35,32 +35,40 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^1.0.0",
-		"@acdh-oeaw/eslint-config": "^1.0.7",
+		"@acdh-oeaw/eslint-config": "^2.0.0",
 		"@acdh-oeaw/prettier-config": "^2.0.0",
-		"@acdh-oeaw/tsconfig-lib": "^1.0.1",
+		"@acdh-oeaw/tsconfig-lib": "^1.0.2",
 		"@changesets/changelog-github": "^0.5.0",
-		"@changesets/cli": "^2.27.5",
-		"@commitlint/cli": "^19.3.0",
-		"@sinonjs/fake-timers": "^11.2.2",
-		"@types/node": "^20.14.2",
+		"@changesets/cli": "^2.27.8",
+		"@commitlint/cli": "^18.6.1",
+		"@sinonjs/fake-timers": "^13.0.1",
+		"@types/node": "^22.5.4",
 		"@types/sinonjs__fake-timers": "^8.1.5",
-		"eslint": "^8.57.0",
+		"eslint": "^9.10.0",
+		"eslint-config-flat-gitignore": "^0.3.0",
 		"is-ci": "^3.0.1",
-		"lint-staged": "^15.2.5",
+		"lint-staged": "^15.2.10",
 		"listhen": "^1.7.2",
-		"npm-run-all2": "^6.2.0",
-		"prettier": "^3.3.1",
+		"npm-run-all2": "^6.2.2",
+		"prettier": "^3.3.3",
 		"simple-git-hooks": "^2.11.1",
-		"tsup": "^8.1.0",
-		"tsx": "^4.16.0",
-		"typescript": "^5.4.5",
+		"tsup": "^8.2.4",
+		"tsx": "^4.19.0",
+		"typescript": "^5.5.4",
 		"uvu": "^0.5.6"
+	},
+	"pnpm": {
+		"overrides": {
+			"@commitlint/config-conventional": "$@commitlint/cli"
+		},
+		"updateConfig": {
+			"ignoreDependencies": [
+				"@commitlint/cli"
+			]
+		}
 	},
 	"commitlint": {
 		"extends": "@acdh-oeaw/commitlint-config"
-	},
-	"eslintConfig": {
-		"extends": "@acdh-oeaw/eslint-config"
 	},
 	"lint-staged": {
 		"*.ts": [
