--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"node": ">=22",
 		"pnpm": "9.x"
 	},
-	"packageManager": "pnpm@9.10.0",
+	"packageManager": "pnpm@9.15.2",
 	"scripts": {
 		"build": "tsup",
 		"changeset:add": "changeset add",
@@ -35,28 +35,29 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^2.0.0",
-		"@acdh-oeaw/eslint-config": "^2.0.1",
-		"@acdh-oeaw/eslint-config-node": "^2.0.1",
-		"@acdh-oeaw/prettier-config": "^2.0.0",
+		"@acdh-oeaw/eslint-config": "^2.0.5",
+		"@acdh-oeaw/eslint-config-node": "^2.0.5",
+		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/tsconfig-lib": "^1.1.1",
 		"@changesets/changelog-github": "^0.5.0",
-		"@changesets/cli": "^2.27.8",
-		"@commitlint/cli": "^19.5.0",
-		"@sinonjs/fake-timers": "^13.0.1",
-		"@types/node": "^22.5.4",
+		"@changesets/cli": "^2.27.11",
+		"@commitlint/cli": "^19.6.1",
+		"@sinonjs/fake-timers": "^14.0.0",
+		"@types/node": "^22.10.2",
 		"@types/sinonjs__fake-timers": "^8.1.5",
-		"eslint": "^9.10.0",
+		"eslint": "^9.17.0",
 		"eslint-config-flat-gitignore": "^0.3.0",
-		"globals": "^15.9.0",
-		"is-ci": "^3.0.1",
-		"lint-staged": "^15.2.10",
-		"listhen": "^1.7.2",
-		"npm-run-all2": "^6.2.2",
-		"prettier": "^3.3.3",
+		"expect-type": "^1.1.0",
+		"globals": "^15.14.0",
+		"is-ci": "^4.1.0",
+		"lint-staged": "^15.3.0",
+		"listhen": "^1.9.0",
+		"npm-run-all2": "^7.0.2",
+		"prettier": "^3.4.2",
 		"simple-git-hooks": "^2.11.1",
-		"tsup": "^8.2.4",
-		"tsx": "^4.19.1",
-		"typescript": "^5.6.2",
+		"tsup": "^8.3.5",
+		"tsx": "^4.19.2",
+		"typescript": "^5.7.2",
 		"uvu": "^0.5.6"
 	},
 	"commitlint": {
