--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"tsup": "^8.4.0",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.26.0",
 		"uvu": "^0.5.6"
 	},
 	"pnpm": {
