--- a/package.json
+++ b/package.json
@@ -1,87 +1,90 @@
 {
-  "name": "@acdh-oeaw/lib",
-  "version": "0.3.2",
-  "license": "MIT",
-  "type": "module",
-  "main": "./dist/index.js",
-  "exports": {
-    ".": "./dist/index.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "sideEffects": false,
-  "engines": {
-    "node": ">=22",
-    "pnpm": "10.x"
-  },
-  "packageManager": "pnpm@10.5.2",
-  "scripts": {
-    "build": "tsdown",
-    "changeset:add": "changeset add",
-    "changeset:status": "changeset status --verbose",
-    "ci:release": "changeset publish",
-    "ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
-    "format:check": "prettier . --cache --cache-location ./.prettiercache --check --ignore-path ./.gitignore",
-    "format:fix": "pnpm run format:check --write",
-    "lint:check": "eslint . --cache",
-    "lint:fix": "pnpm run lint:check --fix",
-    "prepare": "run-s setup",
-    "prepublishOnly": "run-s validate build",
-    "setup": "is-ci || simple-git-hooks",
-    "test": "NODE_OPTIONS=\"--import tsx\" uvu",
-    "types:check": "tsc --noEmit",
-    "validate": "run-p format:check lint:check types:check test"
-  },
-  "devDependencies": {
-    "@acdh-oeaw/commitlint-config": "^2.0.0",
-    "@acdh-oeaw/eslint-config": "^2.0.7",
-    "@acdh-oeaw/eslint-config-node": "^2.0.7",
-    "@acdh-oeaw/prettier-config": "^2.0.1",
-    "@acdh-oeaw/tsconfig-lib": "^1.3.0",
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.28.1",
-    "@commitlint/cli": "^19.7.1",
-    "@sinonjs/fake-timers": "^14.0.0",
-    "@types/node": "^22.13.9",
-    "@types/sinonjs__fake-timers": "^8.1.5",
-    "eslint": "^9.21.0",
-    "eslint-config-flat-gitignore": "^2.1.0",
-    "expect-type": "^1.2.0",
-    "globals": "^16.0.0",
-    "is-ci": "^4.1.0",
-    "lint-staged": "^15.4.3",
-    "listhen": "^1.9.0",
-    "npm-run-all2": "^7.0.2",
-    "prettier": "^3.5.3",
-    "simple-git-hooks": "^2.11.1",
-    "tsdown": "^0.12.8",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "uvu": "^0.5.6"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "esbuild",
-      "simple-git-hooks"
-    ]
-  },
-  "commitlint": {
-    "extends": "@acdh-oeaw/commitlint-config"
-  },
-  "lint-staged": {
-    "*.@(js|ts)": [
-      "eslint --cache --fix",
-      "prettier --cache --cache-location ./.prettiercache --write"
-    ],
-    "*.!(js|ts)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
-  },
-  "prettier": "@acdh-oeaw/prettier-config",
-  "simple-git-hooks": {
-    "commit-msg": "pnpm exec commitlint --edit",
-    "pre-commit": "pnpm exec lint-staged",
-    "pre-push": "pnpm run validate"
-  }
+	"name": "@acdh-oeaw/lib",
+	"version": "0.3.2",
+	"license": "MIT",
+	"type": "module",
+	"main": "./dist/index.js",
+	"exports": {
+		".": "./dist/index.js"
+	},
+	"files": [
+		"dist"
+	],
+	"sideEffects": false,
+	"engines": {
+		"node": ">=22",
+		"pnpm": "10.x"
+	},
+	"packageManager": "pnpm@10.12.2",
+	"scripts": {
+		"build": "tsdown",
+		"changeset:add": "changeset add",
+		"changeset:status": "changeset status --verbose",
+		"ci:release": "changeset publish",
+		"ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
+		"format:check": "prettier . --cache --cache-location ./.prettiercache --check --ignore-path ./.gitignore",
+		"format:fix": "pnpm run format:check --write",
+		"lint:check": "eslint . --cache",
+		"lint:fix": "pnpm run lint:check --fix",
+		"prepare": "run-s setup",
+		"prepublishOnly": "run-s validate build",
+		"setup": "is-ci || simple-git-hooks",
+		"test": "NODE_OPTIONS=\"--import tsx\" uvu",
+		"types:check": "tsc --noEmit",
+		"validate": "run-p format:check lint:check types:check test"
+	},
+	"devDependencies": {
+		"@acdh-oeaw/commitlint-config": "^2.0.0",
+		"@acdh-oeaw/eslint-config": "^2.0.9",
+		"@acdh-oeaw/eslint-config-node": "^2.0.9",
+		"@acdh-oeaw/prettier-config": "^2.0.1",
+		"@acdh-oeaw/tsconfig-lib": "^1.3.0",
+		"@changesets/changelog-github": "^0.5.1",
+		"@changesets/cli": "^2.29.5",
+		"@commitlint/cli": "^19.8.1",
+		"@sinonjs/fake-timers": "^14.0.0",
+		"@types/node": "^22.13.9",
+		"@types/sinonjs__fake-timers": "^8.1.5",
+		"eslint": "^9.29.0",
+		"eslint-config-flat-gitignore": "^2.1.0",
+		"expect-type": "^1.2.1",
+		"globals": "^16.2.0",
+		"is-ci": "^4.1.0",
+		"lint-staged": "^16.1.2",
+		"listhen": "^1.9.0",
+		"npm-run-all2": "^8.0.4",
+		"prettier": "^3.6.0",
+		"simple-git-hooks": "^2.13.0",
+		"tsdown": "^0.12.8",
+		"tsx": "^4.20.3",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.34.1",
+		"uvu": "^0.5.6"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@parcel/watcher",
+			"esbuild",
+			"simple-git-hooks"
+		],
+		"ignoredBuiltDependencies": [
+			"unrs-resolver"
+		]
+	},
+	"commitlint": {
+		"extends": "@acdh-oeaw/commitlint-config"
+	},
+	"lint-staged": {
+		"*.@(js|ts)": [
+			"eslint --cache --fix",
+			"prettier --cache --cache-location ./.prettiercache --write"
+		],
+		"*.!(js|ts)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
+	},
+	"prettier": "@acdh-oeaw/prettier-config",
+	"simple-git-hooks": {
+		"commit-msg": "pnpm exec commitlint --edit",
+		"pre-commit": "pnpm exec lint-staged",
+		"pre-push": "pnpm run validate"
+	}
 }
