--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "@acdh-oeaw/tsconfig-lib",
+	"compilerOptions": {
+		"allowJs": false,
+		"checkJs": false,
+		"isolatedDeclarations": true
+	},
 	"exclude": ["dist", "node_modules"]
 }
