build: use separate tsconfig for build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,9 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "@acdh-oeaw/tsconfig-lib",
 	"compilerOptions": {
-		"declaration": false
+		"allowJs": false,
+		"checkJs": false,
+		"isolatedDeclarations": true
 	},
 	"exclude": ["dist", "node_modules"]
 }
