--- a/package.json
+++ b/package.json
@@ -15,64 +15,65 @@
 	],
 	"sideEffects": false,
 	"engines": {
-		"node": ">=22",
-		"pnpm": "10.x"
+		"node": ">=22"
 	},
-	"packageManager": "pnpm@10.12.2",
+	"devEngines": {
+		"packageManager": {
+			"name": "pnpm",
+			"version": "^10",
+			"onFail": "download"
+		},
+		"runtime": {
+			"name": "node",
+			"version": "^24",
+			"onFail": "download"
+		}
+	},
+	"packageManager": "pnpm@10.20.0",
 	"scripts": {
 		"build": "tsdown",
 		"changeset:add": "changeset add",
 		"changeset:status": "changeset status --verbose",
 		"ci:release": "changeset publish",
 		"ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
-		"format:check": "prettier . --cache --cache-location ./.prettiercache --check --ignore-path ./.gitignore",
+		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
 		"format:fix": "pnpm run format:check --write",
 		"lint:check": "eslint . --cache",
 		"lint:fix": "pnpm run lint:check --fix",
 		"prepare": "run-s setup",
 		"prepublishOnly": "run-s validate build",
-		"setup": "is-ci || simple-git-hooks",
+		"setup": "is-in-ci || simple-git-hooks",
 		"test": "NODE_OPTIONS=\"--import tsx\" uvu",
 		"types:check": "tsc --noEmit",
 		"validate": "run-p format:check lint:check types:check test"
 	},
 	"devDependencies": {
-		"@acdh-oeaw/commitlint-config": "^2.0.0",
+		"@acdh-oeaw/commitlint-config": "^3.0.0",
 		"@acdh-oeaw/eslint-config": "^2.0.9",
 		"@acdh-oeaw/eslint-config-node": "^2.0.9",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/tsconfig-lib": "^1.3.0",
+		"@arethetypeswrong/core": "^0.18.2",
 		"@changesets/changelog-github": "^0.5.1",
 		"@changesets/cli": "^2.29.5",
-		"@commitlint/cli": "^19.8.1",
-		"@sinonjs/fake-timers": "^14.0.0",
-		"@types/node": "^22.13.9",
-		"@types/sinonjs__fake-timers": "^8.1.5",
-		"eslint": "^9.29.0",
+		"@commitlint/cli": "^20.1.0",
+		"@sinonjs/fake-timers": "^15.0.0",
+		"@types/node": "^24.10.0",
+		"@types/sinonjs__fake-timers": "^15.0.1",
+		"eslint": "^9.39.1",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"expect-type": "^1.2.1",
-		"globals": "^16.2.0",
-		"is-ci": "^4.1.0",
-		"lint-staged": "^16.1.2",
+		"globals": "^16.5.0",
+		"is-in-ci": "^2.0.0",
+		"lint-staged": "^16.2.6",
 		"listhen": "^1.9.0",
 		"npm-run-all2": "^8.0.4",
 		"prettier": "^3.6.0",
 		"simple-git-hooks": "^2.13.0",
-		"tsdown": "^0.12.8",
-		"tsx": "^4.20.3",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.1",
+		"tsdown": "^0.16.0",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3",
 		"uvu": "^0.5.6"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@parcel/watcher",
-			"esbuild",
-			"simple-git-hooks"
-		],
-		"ignoredBuiltDependencies": [
-			"unrs-resolver"
-		]
 	},
 	"commitlint": {
 		"extends": "@acdh-oeaw/commitlint-config"
