--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
 		"changeset:add": "changeset add",
 		"changeset:status": "changeset status --verbose",
 		"ci:release": "changeset publish",
-		"ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
-		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
-		"format:fix": "pnpm run format:check --write",
+		"ci:version": "changeset version && oxfmt \"**/CHANGELOG.md\"",
+		"format:check": "oxfmt --check",
+		"format:fix": "oxfmt",
 		"lint:check": "eslint . --cache",
 		"lint:fix": "pnpm run lint:check --fix",
 		"prepare": "run-s setup",
@@ -46,7 +46,6 @@
 		"@acdh-oeaw/commitlint-config": "^3.0.0",
 		"@acdh-oeaw/eslint-config": "^2.0.9",
 		"@acdh-oeaw/eslint-config-node": "^2.0.9",
-		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/tsconfig-lib": "^1.3.0",
 		"@arethetypeswrong/core": "^0.18.2",
 		"@changesets/changelog-github": "^0.5.1",
@@ -63,7 +62,7 @@
 		"lint-staged": "^16.2.6",
 		"listhen": "^1.9.0",
 		"npm-run-all2": "^8.0.4",
-		"prettier": "^3.6.0",
+		"oxfmt": "^0.11.0",
 		"simple-git-hooks": "^2.13.0",
 		"tsdown": "^0.16.0",
 		"tsx": "^4.20.6",
@@ -76,11 +75,10 @@
 	"lint-staged": {
 		"*.@(js|ts)": [
 			"eslint --cache --fix",
-			"prettier --cache --cache-location ./.prettiercache --write"
+			"oxfmt"
 		],
-		"*.!(js|ts)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
+		"*.!(js|ts)": "oxfmt --no-error-on-unmatched-patterne"
 	},
-	"prettier": "@acdh-oeaw/prettier-config",
 	"simple-git-hooks": {
 		"commit-msg": "pnpm exec commitlint --edit",
 		"pre-commit": "pnpm exec lint-staged",
