--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-	"recommendations": [
-		"dbaeumer.vscode-eslint",
-		"editorconfig.editorconfig",
-		"esbenp.prettier-vscode",
-		"oxc.oxc-vscode"
-	]
+	"recommendations": ["dbaeumer.vscode-eslint", "editorconfig.editorconfig", "oxc.oxc-vscode"]
 }
