chore: format .js and .ts with oxfmt (#35)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,11 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll": "explicit"
 	},
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.defaultFormatter": "oxc.oxc-vscode",
 	"editor.formatOnSave": true,
 	"editor.rulers": [100],
 	"eslint.enable": true,
 	"eslint.validate": ["javascript", "typescript"],
-	"files.eol": "\n",
 	"terminal.integrated.enablePersistentSessions": false,
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"typescript.tsdk": "node_modules/typescript/lib",
