--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
 		"changeset:add": "changeset add",
 		"changeset:status": "changeset status --verbose",
 		"ci:release": "changeset publish",
-		"ci:version": "changeset version && prettier \"**/CHANGELOG.md\" --write",
-		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
-		"format:fix": "pnpm run format:check --write",
+		"ci:version": "changeset version && oxfmt \"**/CHANGELOG.md\"",
+		"format:check": "oxfmt --check",
+		"format:fix": "oxfmt --write",
 		"lint:check": "eslint . --cache",
 		"lint:fix": "pnpm run lint:check --fix",
 		"prepare": "run-s setup",
@@ -44,29 +44,28 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^3.0.0",
-		"@acdh-oeaw/eslint-config": "^2.0.9",
-		"@acdh-oeaw/eslint-config-node": "^2.0.9",
-		"@acdh-oeaw/prettier-config": "^2.0.1",
+		"@acdh-oeaw/eslint-config": "^2.0.11",
+		"@acdh-oeaw/eslint-config-node": "^2.0.11",
 		"@acdh-oeaw/tsconfig-lib": "^1.3.0",
 		"@arethetypeswrong/core": "^0.18.2",
-		"@changesets/changelog-github": "^0.5.1",
-		"@changesets/cli": "^2.29.5",
-		"@commitlint/cli": "^20.1.0",
-		"@sinonjs/fake-timers": "^15.0.0",
-		"@types/node": "^24.10.0",
+		"@changesets/changelog-github": "^0.5.2",
+		"@changesets/cli": "^2.29.8",
+		"@commitlint/cli": "^20.2.0",
+		"@sinonjs/fake-timers": "^15.1.0",
+		"@types/node": "^24.10.4",
 		"@types/sinonjs__fake-timers": "^15.0.1",
-		"eslint": "^9.39.1",
+		"eslint": "^9.39.2",
 		"eslint-config-flat-gitignore": "^2.1.0",
-		"expect-type": "^1.2.1",
+		"expect-type": "^1.3.0",
 		"globals": "^16.5.0",
 		"is-in-ci": "^2.0.0",
-		"lint-staged": "^16.2.6",
+		"lint-staged": "^16.2.7",
 		"listhen": "^1.9.0",
 		"npm-run-all2": "^8.0.4",
-		"prettier": "^3.6.0",
-		"simple-git-hooks": "^2.13.0",
-		"tsdown": "^0.16.0",
-		"tsx": "^4.20.6",
+		"oxfmt": "^0.21.0",
+		"simple-git-hooks": "^2.13.1",
+		"tsdown": "^0.18.4",
+		"tsx": "^4.21.0",
 		"typescript": "^5.9.3",
 		"uvu": "^0.5.6"
 	},
@@ -76,11 +75,10 @@
 	"lint-staged": {
 		"*.@(js|ts)": [
 			"eslint --cache --fix",
-			"prettier --cache --cache-location ./.prettiercache --write"
+			"oxfmt --write"
 		],
-		"*.!(js|ts)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
+		"*.!(js|ts)": "oxfmt --no-error-on-unmatched-pattern --write"
 	},
-	"prettier": "@acdh-oeaw/prettier-config",
 	"simple-git-hooks": {
 		"commit-msg": "pnpm exec commitlint --edit",
 		"pre-commit": "pnpm exec lint-staged",
