--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	],
 	"sideEffects": false,
 	"engines": {
-		"node": ">=22"
+		"node": ">=24"
 	},
 	"devEngines": {
 		"runtime": {
@@ -24,7 +24,7 @@
 			"onFail": "download"
 		}
 	},
-	"packageManager": "pnpm@10.20.0",
+	"packageManager": "pnpm@10.27.0",
 	"scripts": {
 		"build": "tsdown",
 		"changeset:add": "changeset add",
@@ -83,5 +83,8 @@
 		"commit-msg": "pnpm exec commitlint --edit",
 		"pre-commit": "pnpm exec lint-staged",
 		"pre-push": "pnpm run validate"
+	},
+	"dependencies": {
+		"is-network-error": "^1.3.0"
 	}
 }
