--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	],
 	"sideEffects": false,
 	"engines": {
-		"node": ">=22"
+		"node": ">=24"
 	},
 	"devEngines": {
 		"runtime": {
@@ -24,7 +24,7 @@
 			"onFail": "download"
 		}
 	},
-	"packageManager": "pnpm@10.20.0",
+	"packageManager": "pnpm@10.27.0",
 	"scripts": {
 		"build": "tsdown",
 		"changeset:add": "changeset add",
@@ -41,6 +41,9 @@
 		"test": "NODE_OPTIONS=\"--import tsx\" uvu",
 		"types:check": "tsc --noEmit",
 		"validate": "run-p format:check lint:check types:check test"
+	},
+	"dependencies": {
+		"is-network-error": "^1.3.0"
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^3.0.0",
