--- a/package.json
+++ b/package.json
@@ -47,27 +47,27 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/commitlint-config": "^3.0.0",
-		"@acdh-oeaw/eslint-config": "^2.0.11",
-		"@acdh-oeaw/eslint-config-node": "^2.0.11",
+		"@acdh-oeaw/eslint-config": "^2.0.12",
+		"@acdh-oeaw/eslint-config-node": "^2.0.12",
 		"@acdh-oeaw/tsconfig-lib": "^1.3.0",
 		"@arethetypeswrong/core": "^0.18.2",
 		"@changesets/changelog-github": "^0.5.2",
 		"@changesets/cli": "^2.29.8",
-		"@commitlint/cli": "^20.2.0",
+		"@commitlint/cli": "^20.3.0",
 		"@sinonjs/fake-timers": "^15.1.0",
 		"@types/node": "^24.10.4",
 		"@types/sinonjs__fake-timers": "^15.0.1",
 		"eslint": "^9.39.2",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"expect-type": "^1.3.0",
-		"globals": "^16.5.0",
+		"globals": "^17.0.0",
 		"is-in-ci": "^2.0.0",
 		"lint-staged": "^16.2.7",
 		"listhen": "^1.9.0",
 		"npm-run-all2": "^8.0.4",
-		"oxfmt": "^0.21.0",
+		"oxfmt": "^0.23.0",
 		"simple-git-hooks": "^2.13.1",
-		"tsdown": "^0.18.4",
+		"tsdown": "0.19.0-beta.3",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3",
 		"uvu": "^0.5.6"
