--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"prepare": "run-s setup",
 		"prepublishOnly": "run-s validate build",
 		"setup": "is-in-ci || simple-git-hooks",
-		"test": "NODE_OPTIONS=\"--import tsx\" uvu",
+		"test": "uvu",
 		"types:check": "tsc --noEmit",
 		"validate": "run-p format:check lint:check types:check test"
 	},
@@ -67,8 +67,7 @@
 		"npm-run-all2": "^8.0.4",
 		"oxfmt": "^0.23.0",
 		"simple-git-hooks": "^2.13.1",
-		"tsdown": "0.19.0-beta.3",
-		"tsx": "^4.21.0",
+		"tsdown": "^0.19.0-beta.3",
 		"typescript": "^5.9.3",
 		"uvu": "^0.5.6"
 	},
